fix price display on mobile

--- a/Views/frontend/_public/src/less/MoCustomFriedmEnev.less
+++ b/Views/frontend/_public/src/less/MoCustomFriedmEnev.less
@@ -90,5 +90,12 @@
         .last-seen-products-item--title + .product--price {
             margin-top: 130px;
         }
+        .product--price {
+            .unitize(right, 48);
+
+            .product--box .price--default:not(.is--discount) {
+                .unitize(margin-top, 24);
+            }
+        }
     }
 }
